GNOME Bugzilla – Bug 672417
Fix deprecations and file warnings
Last modified: 2012-03-23 09:51:08 UTC
See patches
Created attachment 210127 [details] [review] fail-whale: Don't use deprecated API
Created attachment 210128 [details] [review] manager: Fix compile warning
Review of attachment 210127 [details] [review]: Assuming my guess is right, please commit after hard code freeze. ::: gnome-session/gsm-fail-whale-dialog.c @@ -189,3 @@ - gtk_widget_get_visible (gtk_bin_get_child (bin))) { - gtk_widget_size_request (gtk_bin_get_child (bin), requisition); - } I guess this was used for the list of extensions, right?
Review of attachment 210128 [details] [review]: Please commit after hard code freeze.
Attachment 210127 [details] pushed as ad6d425 - fail-whale: Don't use deprecated API Attachment 210128 [details] pushed as 1313fbb - manager: Fix compile warning