fail-whale: Don't use deprecated API

https://bugzilla.gnome.org/show_bug.cgi?id=672417